--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-attrs==19.3.0
-importlib-metadata==0.23
-more-itertools==7.2.0
-packaging==19.2
-pluggy==0.13.1
-py==1.8.0
-pyparsing==2.4.5
-pytest==5.3.1
-six==1.13.0
-wcwidth==0.1.7
-zipp==0.6.0
+iniconfig==2.0.0
+packaging==23.2
+pluggy==1.3.0
+pytest==7.4.2
+setuptools==68.2.2
+wheel==0.41.2
